* mb-clientd is  a version of the methabot client, running in the background and
  communicating with a Methanol web crawling system
* mb-slaved: a slave server  responsible  for  managing and collecting data from
  client daemons
* mb-masterd is the master server, responsible  for statistics and system-global
  signaling
* phpMadMind is a web interface for administrating a Methanol system

1.6.0
=====
Here comes another feature-packed  release  of  Methabot.  This release contains
such fine new features as  Javascript-MySQL support, parser chaining support and
better URL filtering with support for robots.txt.

Changes and new features:
* New configuration and  script  for  automatically  validating HTML/XHTML pages
  through W3C's validator
* The builtin HTML parser is now much more fault tolerant.
* Modules can now register configuration file scopes and thus be configured from
  configuration files.
* Modules can register  objects  and  functions  that  will  be available to the
  workers (javascript)
* The load_module directive  is  now  available  so  the  user can manually load
  modules.
* Javascript-MySQL binding support through the new lmm_mysql loadable module.
* New parser system with support for  parser chaining. Parsers are now protocol-
  independent.
* Support for handlers, the 'handler' filetype option, and the 'default_handler'
  crawler option.
* New configuration for searching Wikipedia.
* Lots of multithreading optimization and performance improvements
* New option --jail, -J
* Robots Exclusion Standard support
* New URL filtering system
* Lots of improvements to the hostname caching
* New configuration  xmlsource.conf,  converts  HTML  to  XHTML  and outputs the
  converted data.
* Improvements to piping data in and out of methabot
* New configuration for finding RSS feeds on websites
* Support for extracting URLs from CSS files and HTML style elements
* Bugfix   when   linking    a   javascript    library    that  was  built  with